--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,17 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="8dp">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/image_view_heart_rate"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_margin="16dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_margin="8dp"
         android:background="@drawable/background_sensor_item"
         android:backgroundTint="#DE2921"
         android:scaleType="center"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_heart_rate"
@@ -20,22 +20,37 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/text_view_heart_rate"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="8dp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/image_view_heart_rate"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/image_view_heart_rate"
         app:layout_constraintTop_toTopOf="@+id/image_view_heart_rate" />
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/image_view_spo2"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_margin="8dp"
+        android:background="@drawable/background_sensor_item"
+        android:backgroundTint="#DE2922"
+        android:scaleType="center"
+        android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/image_view_heart_rate"
+        app:srcCompat="@drawable/ic_spo"
+        app:tint="?colorOnPrimary" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button_start"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/text_view_spo2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginStart="8dp"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/image_view_spo2"
+        app:layout_constraintStart_toEndOf="@+id/image_view_spo2"
+        app:layout_constraintTop_toTopOf="@+id/image_view_spo2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
